# hybrid_autonomous_tractor_vcu

./: CMakeLists.cmake  CMakeLists.txt  LICENSE  README.md  system_code_structure.txt
.github/workflows/: cmake-single-platform.yml
analysis/: system_structure_analysis.md
cmake/: vcu_controller_config.cmake.in
config/: battery_params.yaml  can_protocols.yaml  control_params.yaml  engine_params.sh  fault_rules.yaml  motor_params.sh  prediction_params.sh  prediction_strategies.yaml  system_config.yaml  vcu_config.json  vehicle_params.yaml
config/implements/: fertilizer_config.yaml  seeder_config.yaml  sprayer_config.yaml
docs/: VCU时序说明.md  deployment_guide.md
docs/CVT控制协议/: CVT无人驾驶控制文档(示例).docx  ~$T无人驾驶控制文档(示例).docx
docs/RTOS/: Infineon + NuttX RTOS 深度分析.md  VCU_POSIX移植分析.md
docs/仿真子系统/: simulation_architecture.md  test_cases_and_validation.md  播种和喷药关键测试用例设计.md  犁地阻力测试用例详细设计.md
docs/农具控制子系统/: 农具控制功能需求分析.md  农具控制系统架构设计.md  农具集成指南.md
docs/源码说明/: VCU主程序系统详细解析 (main_vcu_system.cpp).md  VCU核心类型详细解析（vcu_core_types_analysis）.md  vcu_core_types_analysis.md
examples/: hydraulic_control_example.cpp  integration_example.cpp
include/: can_bus_interface.hpp  predictive_analytics.hpp  system_integration.hpp  vcu_core_types.hpp
include/control/: braking_controller.hpp  cvt_controller.hpp  energy_manager.hpp  i_implement_controller.hpp  implement_control_manager.hpp  steering_controller.hpp  torque_arbiter.hpp
include/control/implement_drivers/: fertilizer_controller.hpp  plow_controller.hpp  seeder_controller.hpp  sprayer_controller.hpp
include/diagnostic/: adaptive_learner.hpp  data_logger.hpp  health_monitor.hpp
include/execution/: actuator_interface.hpp  fault_handler.hpp  safety_monitor.hpp
include/hardware/: can_driver.hpp  gpio_driver.hpp  watchdog.hpp
include/integration/: isobus_adapter.hpp  model_integration.hpp
include/models/: battery_model.hpp  engine_model.hpp  motor_model.hpp  vehicle_dynamics_model.hpp
include/perception/: load_detector.hpp  sensor_fusion.hpp
include/prediction/: predictive_analytics.hpp
include/utils/: config_parser.hpp  tractor_state_calculator.hpp
include/vcu/adas_interface/: adas_can_interface.h  adas_interface_factory.h  adas_vcu_protocol.h  vcu_adas_interface.h
include/vcu/can/: can_frame.h  can_interface.h  j1939_protocol.h  platform_can_interface.h
include/vcu/common/: vcu_data_types.h  vcu_types.h
include/vcu/config/: config_manager.h  json_config_manager.h
include/vcu/core/: hydraulic_service.h  vcu_service.h  vcu_service_with_cvt_strategy.h
include/vcu/cvt/: cvt_config.h  cvt_controller.h  cvt_controller_new.h  cvt_strategy.h  cvt_strategy_factory.h  hmcvt_vendor1_strategy.h
include/vcu/diag/: diagnostic_monitor.h  file_diagnostic_monitor.h
scripts/: build.sh  build_linux.sh  build_nuttx.sh  deploy_target.sh  install.sh  run_cvt_tests.sh  vcu.service
simulation/: Makefile  README.md  analyze_seeding_spraying_data.py  analyze_test_results.py  build_data_generator.sh  build_intelligent_test.sh  fault_injector.hpp  intelligent_decision_test.cpp  main_simulation.cpp  plow_resistance_simulation.cpp  powertrain_data_examples.md  powertrain_data_generator.cpp  quick_test.sh  run_plow_test.sh  run_seeding_spraying_test.sh  seeding_spraying_simulation.cpp  virtual_can_bus.hpp  visualize_powertrain_data.py
simulation/models/: enhanced_plow_model.hpp  environment_model.hpp  implement_model.cpp  implement_model.hpp  powertrain_model.cpp  powertrain_model.hpp
simulation/scenarios/: critical_plow_resistance_test.yaml  scenario1.yaml
simulation_hil/: README.md
simulation_hil/architecture/: hil_architecture_v1.md
simulation_hil/communication/: vcu_communication_protocol.md
simulation_hil/hardware/: hil_vcu_hardware_configuration_v1.md
simulation_hil/testing/: hil_test_plan_v1.md
src/: can_bus_interface.cpp  main_vcu_system.cpp  main_vcu_system.cpp.bak  system_integration.cpp  vcu_main.cpp
src/adas_interface/: adas_can_interface.cpp  adas_interface_factory.cpp
src/can/: can_interface.cpp  j1939_protocol.cpp  platform_can_interface.cpp  socketcan_interface.cpp
src/config/: json_config_manager.cpp
src/control/: braking_controller.cpp  cvt_controller.cpp  energy_manager.cpp  implement_control_manager.cpp  steering_controller.cpp  torque_arbiter.cpp
src/core/: hydraulic_service.cpp  vcu_service.cpp  vcu_service_with_cvt_strategy.cpp
src/cvt/: cvt_config.cpp  cvt_controller.cpp  cvt_controller_new.cpp  cvt_strategy_factory.cpp  hmcvt_vendor1_strategy.cpp
src/diag/: file_diagnostic_monitor.cpp
src/diagnostic/: adaptive_learner.cpp  data_logger.cpp  health_monitor.cpp
src/execution/: actuator_interface.cpp  fault_handler.cpp  safety_monitor.cpp
src/hal/: linux_hal.cpp
src/hardware/: pwm_driver.cpp  watchdog.cpp
src/integration/: model_integration.cpp
src/models/: battery_model.cpp  engine_model.cpp  motor_model.cpp  vehicle_dynamics_model.cpp
src/perception/: load_detector.cpp  sensor_fusion.cpp  sensor_fusion_patch_example.cpp
src/platform/: platform_factory.cpp
src/prediction/: lightweight_ml_predictor.cpp  load_predictor.cpp  platform_load_predictor.cpp  predictive_analytics.cpp  strategy_manager.cpp
src/sensors/: platform_sensor_data_manager.cpp  sensor_data_manager.cpp
src/utils/: config_parser.cpp  tractor_state_calculator.cpp
tests/: minimal_test.cpp  simple_integration_test.cpp  simple_system_test.cpp  system_test.cpp  system_test_fixes.cpp  test_hydraulic_control.cpp
tests/can/: test_can_frame.cpp  test_can_interface.cpp  test_j1939_protocol.cpp
tests/config/: test_config_manager.cpp
tests/core/: test_vcu_service.cpp
tests/cvt/: mock_can_interface.h  test_cvt_config.cpp  test_cvt_controller.cpp  test_cvt_strategy_factory.cpp  test_hmcvt_vendor1_strategy.cpp
tests/data/: test_cvt_config.txt
tests/diag/: test_diagnostic_monitor.cpp
tests/integration/: test_cvt_integration.cpp
tests/prediction/: test_load_predictor.cpp
tests/sensors/: test_sensor_data_manager.cpp  test_sensor_simple.cpp
tests/unit_tests/: test_implement_control.cpp
(+49 files in other folders)
